--- a/0.doc/ChangeLog.txt
+++ b/0.doc/ChangeLog.txt
@@ -1,164 +1,7 @@
-$************************V1.1***************************************$
-+--------- V1.1.29 --------------------+
-2018-10-23
-1. 修改 preprocess.lua/preprocess()&create_upload(), 61850强制升级时，增加*.xml文件更新。
++--------- V1.1 --------------------+
+2019-8-31
+   优化版本显示.
 
-+--------- V1.1.28 --------------------+
-2018-08-31
-1. 修改 main(), 解决 CPU 占用始终过高的问题。
-
-+--------- V1.1.27 --------------------+
-2017-09-20
-1. 修改 preprocess.lua create_upload(), 解决 61850 db 版本不更新的问题。
-2. 修改 update.sh 将重启延时由9秒(cold_reset 30)改为12秒(cold_reset 40)。
-2017-09-19
-1. 修改 preprocess.lua, 解决初次升级时 scl_srvr_n 无执行权限的问题。
-2017-09-18
-1. 修改 preprocess.lua, actuator/main.cpp, gui/main_window.cpp, 
-   在发现系统未进行过串口升级时，给出相应提示。
-
-+--------- V1.1.26 --------------------+
-2017-09-15
-1. 修改 .sys/23/a_post.lua, 修复“Reset sysconfig”功能故障
-
-+--------- V1.1.25 --------------------+
-2017-09-12
-1. 修改 preprocess.lua create_upload(), update.sh,增加 61850 校验功能
-2. 修改 actuator/main.cpp，解决打不开up_result文件的问题
-
-+--------- V1.1.24 --------------------+
-2017-09-05
-1. 增加了.sys/16, 修改 actuator/main.cpp, CallLua() main(), 增加 "Reset sysconfig" 功能、
-   优化程序结构。
-
-+--------- V1.1.23 --------------------+
-2017-7-30
-1. 修改 preprocess.lua preprocess() create_upload() create_update, 根据系统
-   是否存在 /bin/flashcp 来判断新旧系统。
-2. 修改 init.scr, 增加 flashcp 检查语句。
-3. 修改 actuator/main.cpp main(), 通过给sftp增加 -be 参数, 避免在批量传输时   由于某个文件传输失败导致取消后续文件传输的问题。
-
-+--------- V1.1.22 --------------------+
-2017-7-24
-1. 修改 preprocess.lua create_upload(), 更正了 CA02 主板不能升级内核的问题。
-2. 修改 preprocess.luacreate_update(), 更正了 flash 升级工具类型误判的问题。
-
-+--------- V1.1.21 --------------------+
-2017-7-21
-1. 修改了 preprocess.lua create_upload(), 解决单独升级61850不自动重启的问题。
-
-+--------- V1.1.20 --------------------+
-2017-7-3
-1. 修改了 preprocess.lua create_upload(), update.sh, 增加了sm4.key 文件。
-
-+--------- V1.1.19 --------------------+
-2017-6-15
-1. 修改了 rc.driver 注释掉 sshd stop 命令，默认开启sshd。增加 portmap stop, 默认关闭111端口
-2. 修改 up_rc_driver, 优化了版本判断
-3. 修改 mnthost,增加portmap启动命令，否则挂接速度会非常慢。
-
-+--------- V1.1.18 --------------------+
-2017-5-24
-1. 修订 preprocess.lua create_upload(), 更正了不能强制升级内核的问题。
-
-+--------- V1.1.17 --------------------+
-2017-5-12
-1. 增加了重要文件的MD5校验功能
-2. actuator 的调用参数增加dbg。 如果有dbg参数,升级完成后暂停，否则直接结束。
-3. 优化了返回结果的处理
-4. 双击 IP 左侧区域对应的调试功能 由“只判断不实施” 改为“只上传升级文件，但启动升级”
-
-+--------- V1.1.16 --------------------+
-2017-5-8
-1. 修改 preprocess.lua create_upload, 增加根据root 版本来确定需要升级的app
-2. 修改 .sys/t61850.lst 增加河北、山西
-3. 修改 preprocess.lua create_upload, 更正了内核不能升级的问题
-4. 修改 preprocess.lua scan_upfile, 更正了版本误判的问题
-
-2017-5-4
-1. 修改 preprocess.lua create_upload, 增加根据root 版本来确定需要升级的kernel 和 rtfs。
-2. 修改 preprocess.lua create_update, 增加根据root 版本来确定flash copy 工具。
-3. 修改 update.sh, 将第1个参数由主板类型改为flash copy tools 类型。删掉了 
-   flash_cp2215 相关代码, root 3.0之前的用 flash_cp-2215, 之后的用 flashcp.
-4. 修改 actuator main() 的返回值。
-
-+--------- V1.1.15 --------------------+
-2017-4-21
-     修改 MainWindow::CBButtonStart, 调用upactuator.exe时增加IP参数, 去掉主板参数。
-     GUI 删除选择主板型号的相关代码。
-     修改actuaror/main.cpp 的 main(), 修改输入参数(ip, port)的处理。
-     去掉pause 命令
-     增加 用于命令行调用的批处理文件 upqnet.bat
-     修改gui/main.cpp CBMainWindow(), 注释掉KeyFileClean()
-     
-+--------- V1.1.13 --------------------+
-2017-3-29
-     修改 .sys\script\27\和28\, 启动停止61850服务后，不再重启。
-
-2017-2-16
-     修改 .sys\script\20\, 更改了冷启动的方式。
-     修改 .sys\script\1\, 调试信息增加了/tmp中的内容
-+--------- V1.1.12 --------------------+
-2017-1-23
-     修改 preprocess.lua, 增加 PQAny316 的处理。
-+--------- V1.1.11 --------------------+
-2017-1-13
-     修改 gui/*, preprocess.lua, 增加 OEM Kernel 参数设置功能。
-+--------- V1.1.10 --------------------+
-2016-12-28
-     修改 preprocess.lua compare_ver(), 增加参数为空的判断。以解决 当从
-   设备获取的版本信息文件为空时，会导致异常退出的问题。
-+--------- V1.1.9 --------------------+
-2016-11-19
-     增加了数据库版本判断功能。
-
-+--------- V1.1.8 --------------------+
-2016-11-13
-     增加 Stop watchdog 选项。
-	 更正 选项ID > 10, 没有/tmp/upf目录的问题。
-	 更正了总是显示"Don't need to upgrade!"的问题。
-     
-+--------- V1.1.7 --------------------+
-2016-11-7
-     增加脚本 update.sh, 将升级操作全部放在此处执行，以避免升级过程中断网导致的升级失败问题
-     相应修改 preprocess.lua。
-     增加 MAC 获取功能。相应地增加脚本 d_post.lua, 修改 actuator/main()
-     
-+--------- V1.1.6 --------------------+
-2016-10-8
-     修改 preprocess.lua。增加ver61850.inf中新增配置项config 的处理。
-2016-09-21
-     修改 preprocess.lua。 增加版本比较功能。新增函数seprt_ver() 和 compare_ver()
-+--------- V1.1.5 --------------------+
-2016-07-13
-     修改 actuator/main.cpp, 更正不能自动注册新设备的问题。
-     端口号默认改为为 deactivate，双击Port中的o,可进行切换。
-
-+--------- V1.1.4 --------------------+
-2016-07-8
-     修改 preprocess.lua。
-      1) 增加了脚本版本及其判断
-      2) 增加了脚本文件ntpclient.sh和clear_save。
-      3) 增加 升级时,稳态数据的删除功能。
-+--------- V1.1.3 --------------------+
-2016-07-5
-     将gui 、执行部分的代码并为一个project。
-+--------- V1.1.2 --------------------+
-2016-07-4
-     将lua有关的代码提取出来，封装到 LuaApi 类中。
-+--------- V1.1.1 --------------------+
-2016-06-30
-     增加升级后不重启以及调试选项，优化用户界面。
-     增加了lua脚本及其调用函数。
-+--------- V1.1.0 --------------------+
-2016-06-21
-     增加强制升级选项。
-     优化用户界面。
-
-$************************V1.0***************************************$
-+--------- V1.0.1 --------------------+
-2016-04-25
-     增加了脚本文件是否存在的判断。
-+--------- V1.0.0 --------------------+
-2014-12-2
-     初始版本。
++--------- V1.0 --------------------+
+2019-8-21
+   初始版本。
