--- a/0.doc/ChangeLog.txt
+++ b/0.doc/ChangeLog.txt
@@ -1,3 +1,7 @@
++--------- V1.2 --------------------+
+2019-9-4
+   增加函数 system_hide(), 解决system(“up_pqied -v”) 会弹出黑窗口的问题.
+
 +--------- V1.1 --------------------+
 2019-8-31
    优化版本显示.
