--- a/0.doc/ChangeLog.txt
+++ b/0.doc/ChangeLog.txt
@@ -1,10 +1,15 @@
++--------- V1.3 --------------------+
+2020-12-29
+   修改 main(), 增加 lua 升级脚本的版本显示.
+   加大了窗体的宽度.
+   
 +--------- V1.2 --------------------+
 2019-9-4
-   增加函数 system_hide(), 解决system(“up_pqied -v”) 会弹出黑窗口的问题.
+   增加函数 system_hide(), 用其替代system(), 解决执行 system() 会弹出黑窗口的问题.
 
 +--------- V1.1 --------------------+
 2019-8-31
-   优化版本显示.
+   修改 main(), 优化版本显示.
 
 +--------- V1.0 --------------------+
 2019-8-21
