--- a/0.doc/ChangeLog.txt
+++ b/0.doc/ChangeLog.txt
@@ -1,3 +1,7 @@
++--------- V1.4 --------------------+
+2021-6-6
+   增加 Check Box "Auto close the cmd line".
+
 +--------- V1.3 --------------------+
 2020-12-29
    修改 main(), 增加 lua 升级脚本的版本显示.
